objects/trailheadapp__User_Trailmix__c.object
<CustomObject>
    <description>Maintains user assignments and follows for trailmixes.</description>
    <fields>
        <fullName>trailheadapp__Assigned_At__c</fullName>
        <label>Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Completed_At__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Due_At__c</fullName>
        <label>Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>trailheadapp__First_Attempted_At__c</fullName>
        <label>First Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Last_Attempted_At__c</fullName>
        <label>Last Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Status__c</fullName>
        <description>Two types of status, &quot;In Progress&quot;, or &quot;Completed&quot; are available to represent the status of a user&apos;s trailmix. While we always expect a value, this is not a required field to enable FLS for trailmix assigners.</description>
        <inlineHelpText>Two types of status, &quot;In Progress&quot;, or &quot;Completed&quot; are available to represent the status of a user&apos;s trailmix.</inlineHelpText>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Trailmix__c</fullName>
        <label>Trailmix</label>
        <referenceTo>trailheadapp__Trailmix__c</referenceTo>
        <relationshipLabel>User Trailmixes</relationshipLabel>
        <relationshipName>User_Trailmixes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>trailheadapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Trailmixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Trailmix</label>
    <nameField>
        <displayFormat>UTM-{0000}</displayFormat>
        <label>User Trailmix ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Trailmixes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>